[metadata]
name = monitorstack
summary = Monitoring plugins for OpenStack
description-file =
    README.rst
author = Major Hayden
author-email = major@mhtx.net
home-page = https://github.com/major/monitorstack
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    monitorstack

[entry_points]
console_scripts =
    monitorstack = monitorstack.cli:cli
